# SPEECH

personalized_hearing_enhancement/: README.md  pyproject.toml  requirements.txt  run.sh
personalized_hearing_enhancement/audiometry/: __init__.py  engine.py  inference.py  profiles.py  session.py  stimuli.py  validation.py
personalized_hearing_enhancement/cli/: main.py
personalized_hearing_enhancement/configs/: default.yaml
personalized_hearing_enhancement/data/: augment.py  dataset.py  download.py
personalized_hearing_enhancement/evaluation/: demo_audio.py  metrics.py  sanity_checks.py
personalized_hearing_enhancement/models/: conditioned_tasnet.py  tasnet.py
personalized_hearing_enhancement/notebooks/: demo_walkthrough.ipynb
personalized_hearing_enhancement/simulation/: __init__.py  calibration_filter.py  device_profiles.json  hearing_loss.py  loudness.py
personalized_hearing_enhancement/tests/: test_audiometry_phase2.py  test_audiometry_validation.py  test_bayesian_audiometry.py  test_determinism.py  test_user_benefit_metrics.py
personalized_hearing_enhancement/training/: losses.py  train.py
personalized_hearing_enhancement/utils/: audio.py  logging_utils.py  plotting.py  repro.py
personalized_hearing_enhancement/video/: video_pipeline.py
