[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-hearing-enhancement"
version = "0.1.0"
description = "Audiogram-conditioned video audio enhancement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "typer>=0.12.0",
  "omegaconf>=2.3.0",
  "rich>=13.7.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]


[project.scripts]
hearing-enhance = "personalized_hearing_enhancement.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["personalized_hearing_enhancement*"]

[tool.setuptools.package-data]
"personalized_hearing_enhancement.simulation" = ["device_profiles.json"]
